# l5r

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
l5r_auto/: abilities.py  build.py  card.py  clans.py  dataclasses.py  deck.py  errors.py  keywords.py  legality.py  locations.py  phases.py  play.py  player.py  rules.py  utils.py
l5r_auto/ai/: __init__.py  harness.py  heuristic_policy.py  policy.py  random_policy.py
l5r_auto/cards/: __init__.py
l5r_auto/cards/celestials/: celestials.json
l5r_auto/cards/events/: a_line_in_the_sand.py  aftermath.py  before_the_dawn.py  celestial_edition.py  coils_of_madness.py  common.py  dark_allies.py  diamond_edition.py  embers_of_war.py  emperor_edition.py  events.json  evil_portents.py  fire_and_shadow.py  forgotten_legacy.py  gates_of_chaos.py  gold_edition.py  honors_veil.py  ivory_edition.py  promotional_celestial.py  promotional_emperor.py  promotional_twenty_festivals.py  samurai_edition.py  second_city.py  seeds_of_decay.py  stronger_than_steel.py  the_coming_storm.py  the_imperial_gift_2.py  the_new_order.py  the_shadows_embrace.py  thunderous_acclaim.py  torn_asunder.py
l5r_auto/cards/followers/: common.py  (+42 more)
l5r_auto/generate/: generate.py
l5r_auto/generator/: main.py
l5r_auto/models/: __init__.py
rules/Twenty Festivals/: 01-overview.md  02-players-victory-decks.md  03-cards.md  04-stats-keywords-abilities.md  05-areas-states.md  CLAUDE.md
tests/: conftest.py  test_abilities.py  test_deck.py  test_entity.py  test_phases.py  test_player.py  test_policy.py
(+794 files in other folders)
