[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "l5r_auto"
description = "Automated deck building for Legend of the Five Rings LCG"
version = "0.1.0"
authors = [
    { name = "aubustou", email = "survivalfr@yahoo.fr" }
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "pdbpp",
]

[project.scripts]
generate_code = "l5r_auto.generate.generate:main"

[tool.setuptools]
packages = ["l5r_auto"]

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
